--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"daisyui": "^4.0.0",
 		"postcss": "^8.4.31",
 		"svelte": "^4.2.2",
+		"sveltekit-view-transition": "^0.5.2",
 		"tailwindcss": "^3.3.5",
 		"vite": "^4.5.0"
 	},
